Project

General

Profile

Actions

Bug #20165

closed

Ractors moving a Struct breaks beyond the first 3 fields

Bug #20165: Ractors moving a Struct breaks beyond the first 3 fields

Added by codekitchen (Brian Palmer) over 2 years ago. Updated over 1 year ago.

Status:
Closed
Assignee:
Target version:
-
ruby -v:
ruby 3.3.0 (2023-12-25 revision 5124f9ac75) [arm64-darwin23]
[ruby-core:116085]

Description

Experimenting with Ractors on ruby 3.3.0, and I'm seeing a bug where if you move a struct between ractors, all but the first 3 fields are set to nil.

Foo = Struct.new(:a,:b,:c,:d,:e,:f)

r = Ractor.new {
  foo = Foo[0,0,0,0,0,0]
  p foo
  Ractor.yield(foo, move: true)
}
p r.take

❯ ruby -v
ruby 3.3.0 (2023-12-25 revision 5124f9ac75) [arm64-darwin23]
❯ ruby rbug.rb       
rbug.rb:3: warning: Ractor is experimental, and the behavior may change in future versions of Ruby! Also there are many implementation issues.
#<struct Foo a=0, b=0, c=0, d=0, e=0, f=0>
#<struct Foo a=0, b=0, c=0, d=nil, e=nil, f=nil>

This seems specific to moving, if I set move: false the struct makes it across OK.


Related issues 3 (0 open3 closed)

Related to Ruby - Bug #20271: Issue with moving embedded string across ractorsClosedko1 (Koichi Sasada)Actions
Related to Ruby - Bug #20267: Hashes that use ar_table aren't moved properly across ractorsClosedko1 (Koichi Sasada)Actions
Related to Ruby - Bug #20255: Embedded arrays aren't moved correctly across ractorsClosedko1 (Koichi Sasada)Actions

Updated by luke-gru (Luke Gruber) over 2 years ago Actions #1 [ruby-core:116158]

I sent a fix for this here https://github.com/ruby/ruby/pull/9910/

Also, currently Ractors are not working well on Ruby 3.3, if you're working with them I suggest staying on 3.2 for now.

Updated by jhawthorn (John Hawthorn) over 1 year ago Actions #2

  • Assignee set to ractor

Updated by byroot (Jean Boussier) over 1 year ago Actions #3 [ruby-core:121935]

  • Status changed from Open to Closed

Duplicate of: [Bug #20271] [Bug #20267] [Bug #20255]

This was fixed in 0350290262ea0fbc4e1807901797ee8a6970c2b9 and a few followups.

Updated by byroot (Jean Boussier) over 1 year ago Actions #4

  • Related to Bug #20271: Issue with moving embedded string across ractors added

Updated by byroot (Jean Boussier) over 1 year ago Actions #5

  • Related to Bug #20267: Hashes that use ar_table aren't moved properly across ractors added

Updated by byroot (Jean Boussier) over 1 year ago Actions #6

  • Related to Bug #20255: Embedded arrays aren't moved correctly across ractors added
Actions

Also available in: PDF Atom