Fix issues with Ractor#send with move option for Array/Hash/Struct

Array/Hash/Struct were not being moved properly. If arrays were embedded
they weren't being moved. Hashes were not being updated properly and
write barriers were not being fired on newly moved object. Structs
fields were not being set properly.

Also fix issue where moved object_id was different from original
object's object id.

Fixes [Bug #20165]